--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
                 <div class="inputbox">
                     <ion-icon name="mail-outline"></ion-icon>
                     <input type="email"required>
-                    <label for="">username</label>
+                    <label for="">email-adress</label>
                 </div>
                 <div class="inputbox">
                     <ion-icon name="lock-closeed-outline"></ion-icon>
